Move KotlinxSerializer dependency in separate artifact

--- a/settings.gradle
+++ b/settings.gradle
@@ -46,6 +46,7 @@ includeEx ':ktor-client:ktor-client-features:ktor-client-json'
 includeEx ':ktor-client:ktor-client-features:ktor-client-json:ktor-client-json-tests'
 includeEx ':ktor-client:ktor-client-features:ktor-client-json:ktor-client-gson'
 includeEx ':ktor-client:ktor-client-features:ktor-client-json:ktor-client-jackson'
+includeEx ':ktor-client:ktor-client-features:ktor-client-json:ktor-client-serialization'
 includeEx ':ktor-client:ktor-client-features:ktor-client-auth'
 includeEx ':ktor-client:ktor-client-features:ktor-client-auth-basic'
 includeEx ':ktor-client:ktor-client-features:ktor-client-websocket'
