--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -58,6 +58,7 @@ kotlin {
 
             api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
             api group: 'com.typesafe', name: 'config', version: '1.3.1'
+            implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-debug:1.1.1'
         }
 
         jvmTest.dependencies {
